--- a/styles.css
+++ b/styles.css
@@ -4902,7 +4902,7 @@ textarea.form-control-lg {
   background-color: rgba(255, 255, 255, 0.85);
   background-clip: padding-box;
   border: 1px solid rgba(0, 0, 0, 0.1);
-  box-shadow: 0 0.5rem 1rem rgba(0, 0, 0, 0.15);
+  box-shadow: 0px 4px #0051c8;
   border-radius: 0.25rem;
 }
 .toast:not(.showing):not(.show) {
@@ -6066,7 +6066,7 @@ textarea.form-control-lg {
 }
 
 .shadow {
-  box-shadow: 0 0.5rem 1rem rgba(0, 0, 0, 0.15) !important;
+  box-shadow: 0px 4px #0051c8 !important;
 }
 
 .shadow-sm {
@@ -9780,8 +9780,7 @@ body {
 }
 
 .inputButtonClassPressed {
-  transform: translateY(0.1em);
-  box-shadow: none;
+  transform: translateY(4px);
 }
 
 .inputButtonLabelClass::after {
