--- a/styles.scss
+++ b/styles.scss
@@ -1,6 +1,6 @@
-@import "bootstrap/scss/bootstrap.scss";
 
-$box-shadow: 0px 4px rgba($blue-500,1);
+$box-shadow:    0px 4px rgba(#0051c8ed,1);
+@import "bootstrap/scss/bootstrap.scss";
 
 body {
     font-size: 1em;
@@ -39,9 +39,11 @@ body {
 .inputButtonClass{
     transform: none;
 }
+
+
 .inputButtonClassPressed{
-    transform: translateY(0.1em);
-    box-shadow: none;
+    transform: translateY(4px);
+
 
 }
 .inputButtonLabelClass::after{
